--- a/app/src/main/res/layout/fragment_room_gridview.xml
+++ b/app/src/main/res/layout/fragment_room_gridview.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="2"
+        android:verticalSpacing="20dp"
+        android:horizontalSpacing="20dp"
         android:stretchMode="columnWidth"/>
 
 </LinearLayout>
