--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,7 +91,7 @@
         android:layout_marginTop="20dp"
         android:background="#086df1"
         android:textColor="@color/colorWhite"
-        android:text="그룹 생성하기" />
+        android:text="방 생성하기" />
 
     <Button
         android:id="@+id/btn_enterRoom"
@@ -102,7 +102,7 @@
         android:layout_marginTop="15dp"
         android:background="#086df1"
         android:textColor="@color/colorWhite"
-        android:text="그룹 참여하기" />
+        android:text="방 참여하기" />
 
 
 </RelativeLayout>
