--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_mainLogo"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_alignParentStart="false"
@@ -26,7 +26,7 @@
         android:id="@+id/et_id"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/iv_mainLogo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:ems="10"
