--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -9,7 +9,7 @@
     tools:context=".fragment.main.ImageFragment">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_mainLogo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"/>
