방 수만큼 방 목록 UI 조정

--- a/app/src/main/res/layout/fragment_createroom.xml
+++ b/app/src/main/res/layout/fragment_createroom.xml
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_rounded_edittext"
+            android:padding="7dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:layout_toRightOf="@id/tv_roomName"
@@ -51,7 +52,7 @@
         <ImageButton
             android:id="@+id/ib_roomProfile"
             style="@android:style/Widget.ImageButton"
-            android:layout_width="240dp"
+            android:layout_width="220dp"
             android:layout_height="170dp"
             android:layout_toRightOf="@id/tv_roomProfile"
             android:layout_alignTop="@id/tv_roomProfile"
@@ -98,6 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_rounded_edittext"
+            android:padding="7dp"
             android:ems="10"
             android:inputType="textMultiLine"
             android:layout_toRightOf="@id/tv_roomText"
