--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -13,7 +13,8 @@
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="목소리를 녹음할게요.\n 버튼을 눌러 시작해 주세요." />
+        android:text="content"
+        android:textAlignment="center" />
 
     <ImageButton
         android:id="@+id/btn_record"
@@ -21,20 +22,25 @@
         android:layout_height="100dp"
         android:layout_below="@id/tv_content"
         android:layout_centerHorizontal="true"
-        android:src="@android:drawable/ic_btn_speak_now" />
+        android:background="@color/colorWhite"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_recording" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_record">
+
         <Button
-            android:id="@+id/btn_submit"
+            android:id="@+id/btn_cancel"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="cancel" />
 
         <Button
-            android:id="@+id/btn_cancel"
+            android:id="@+id/btn_submit"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="submit" />
