--- a/app/src/main/res/layout/fragment_createroom.xml
+++ b/app/src/main/res/layout/fragment_createroom.xml
@@ -35,6 +35,9 @@
             android:padding="7dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:maxLines ="1"
+            android:maxLength="20"
+            android:hint="최대 20자"
             android:layout_toRightOf="@id/tv_roomName"
             android:layout_alignTop="@id/tv_roomName"
             android:layout_alignLeft="@id/btn_privateVoice"
@@ -86,7 +89,7 @@
             android:text="모두가 듣기" />
 
         <TextView
-            android:id="@+id/tv_roomText"
+            android:id="@+id/tv_roomComment"
             android:layout_margin="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,15 +98,20 @@
             android:text="메시지" />
 
         <EditText
-            android:id="@+id/et_roomText"
+            android:id="@+id/et_roomComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_rounded_edittext"
             android:padding="7dp"
             android:ems="10"
+            android:lines="5"
+            android:maxLines ="5"
+            android:maxLength="50"
+            android:hint="최대 50자"
             android:inputType="textMultiLine"
-            android:layout_toRightOf="@id/tv_roomText"
-            android:layout_alignTop="@id/tv_roomText"
+            android:gravity="top|left"
+            android:layout_toRightOf="@id/tv_roomComment"
+            android:layout_alignTop="@id/tv_roomComment"
             android:layout_alignLeft="@id/btn_privateVoice"
             android:text="" />
     </RelativeLayout>
