--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="colorBlack">#000000</color>
     <color name="colorGold">#FFCC33</color>
     <color name="colorMain">#7DB249</color>
+    <color name="colorRedPink">#ee3e61</color>
     <color name="transparent">#00ffffff</color>
 </resources>
