--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,7 @@
         android:text="방 생성하기" />
 
     <Button
-        android:id="@+id/btn_enterRoom"
+        android:id="@+id/btn_inputRoomCode"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:layout_below="@id/btn_createRoom"
@@ -102,6 +102,6 @@
         android:layout_marginTop="15dp"
         android:background="#086df1"
         android:textColor="@color/colorWhite"
-        android:text="방 참여하기" />
+        android:text="방 코드 입력" />
 
 </RelativeLayout>
