--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    tools:context=".activity.LoginActivity"
+    android:orientation="vertical"
+    android:fillViewport="true">
+    
+    
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.LoginActivity">
+    android:orientation="vertical">
 
     <!--로그인 화면 로그 위치-->
-
-
     <ImageView
         android:id="@+id/iv_mainLogo"
         android:layout_width="250dp"
@@ -69,4 +75,4 @@
         android:textSize="15sp" />
 
 </RelativeLayout>
-
+</ScrollView>
