--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -30,15 +30,19 @@
 
         <ImageView
             android:id="@+id/iv_roomProfile"
+            android:layout_margin="10dp"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/custom_rounded" />
 
         <TextView
             android:id="@+id/tv_roomTitle"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/iv_roomProfile"
+            android:textSize="24sp"
             android:text="Room Title"/>
 
         <TextView
@@ -56,7 +60,7 @@
         android:id="@+id/layout_voice"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/layout_title">
-    </RelativeLayout>
+        android:layout_below="@id/layout_title"
+        android:layout_margin="10dp"></RelativeLayout>
 
 </RelativeLayout>
